@@ -1,1 +1,2 @@
-tcp://localhost:3334/pvfs2-fs /mnt/pvfs pvfs2 default 0 0 
+tcp://localhost:3334/pvfs2-fs /mnt/pvfs pvfs2 encoding=direct 0 0 
+
