@@ -5,7 +5,9 @@ PVFS2 Release ChangeLog
 
 pvfs2-0.0.6pre1
 ===============
-- 
+- improved kernel truncate support
+- fixed ioctl return values so that 'tar -xvzf' works on pvfs2 volumes
+- minor configuration file format changes
 
 
 pvfs2-0.0.5
